// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tiger filter converter from model to AFM convert absolute date filter should convert absolute date filter from model to AFM with all attributes 1`] = `
Object {
  "absoluteDateFilter": Object {
    "dataset": Object {
      "identifier": Object {
        "id": "closed.dataset.dt",
        "type": "dataset",
      },
    },
    "from": "2019-08-06",
    "to": "2019-08-12",
  },
}
`;

exports[`tiger filter converter from model to AFM convert absolute date filter should convert absolute date filter without 'from' attribute 1`] = `null`;

exports[`tiger filter converter from model to AFM convert absolute date filter should convert absolute date filter without 'to' attribute 1`] = `null`;

exports[`tiger filter converter from model to AFM convert filter should return absolute date filter 1`] = `
Object {
  "absoluteDateFilter": Object {
    "dataset": Object {
      "identifier": Object {
        "id": "closed.dataset.dt",
        "type": "dataset",
      },
    },
    "from": "2019-08-06",
    "to": "2019-08-12",
  },
}
`;

exports[`tiger filter converter from model to AFM convert filter should return comparison measure value filter 1`] = `
Object {
  "comparisonMeasureValueFilter": Object {
    "measure": Object {
      "localIdentifier": "m_acugFHNJgsBy",
    },
    "operator": "GREATER_THAN",
    "treatNullValuesAs": undefined,
    "value": 128,
  },
}
`;

exports[`tiger filter converter from model to AFM convert filter should return comparison measure value filter with treatNullValueAs 1`] = `
Object {
  "comparisonMeasureValueFilter": Object {
    "measure": Object {
      "localIdentifier": "m_acugFHNJgsBy",
    },
    "operator": "GREATER_THAN",
    "treatNullValuesAs": 0,
    "value": 128,
  },
}
`;

exports[`tiger filter converter from model to AFM convert filter should return negative attribute filter 1`] = `
Object {
  "negativeAttributeFilter": Object {
    "label": Object {
      "identifier": Object {
        "id": "label.product.id.name",
        "type": "label",
      },
    },
    "notIn": Object {
      "values": Array [
        "value 2",
      ],
    },
  },
}
`;

exports[`tiger filter converter from model to AFM convert filter should return negative attribute filter with applyOnResult false 1`] = `
Object {
  "negativeAttributeFilter": Object {
    "applyOnResult": false,
    "label": Object {
      "identifier": Object {
        "id": "label.product.id.name",
        "type": "label",
      },
    },
    "notIn": Object {
      "values": Array [
        "value 2",
      ],
    },
  },
}
`;

exports[`tiger filter converter from model to AFM convert filter should return negative attribute filter with uri attribute elements 1`] = `
Object {
  "negativeAttributeFilter": Object {
    "label": Object {
      "identifier": Object {
        "id": "label.product.id.name",
        "type": "label",
      },
    },
    "notIn": Object {
      "values": Array [
        "value",
      ],
    },
  },
}
`;

exports[`tiger filter converter from model to AFM convert filter should return positive attribute filter 1`] = `
Object {
  "positiveAttributeFilter": Object {
    "in": Object {
      "values": Array [
        "value",
      ],
    },
    "label": Object {
      "identifier": Object {
        "id": "label.product.id.name",
        "type": "label",
      },
    },
  },
}
`;

exports[`tiger filter converter from model to AFM convert filter should return positive attribute filter with applyOnResult true 1`] = `
Object {
  "positiveAttributeFilter": Object {
    "applyOnResult": true,
    "in": Object {
      "values": Array [
        "value",
      ],
    },
    "label": Object {
      "identifier": Object {
        "id": "label.product.id.name",
        "type": "label",
      },
    },
  },
}
`;

exports[`tiger filter converter from model to AFM convert filter should return positive attribute filter with uri attribute elements 1`] = `
Object {
  "positiveAttributeFilter": Object {
    "in": Object {
      "values": Array [
        "value",
      ],
    },
    "label": Object {
      "identifier": Object {
        "id": "label.product.id.name",
        "type": "label",
      },
    },
  },
}
`;

exports[`tiger filter converter from model to AFM convert filter should return range measure value filter 1`] = `
Object {
  "rangeMeasureValueFilter": Object {
    "from": 64,
    "measure": Object {
      "localIdentifier": "m_acugFHNJgsBy",
    },
    "operator": "BETWEEN",
    "to": 128,
    "treatNullValuesAs": undefined,
  },
}
`;

exports[`tiger filter converter from model to AFM convert filter should return range measure value filter with crossed boundaries 1`] = `
Object {
  "rangeMeasureValueFilter": Object {
    "from": 64,
    "measure": Object {
      "localIdentifier": "m_acugFHNJgsBy",
    },
    "operator": "BETWEEN",
    "to": 128,
    "treatNullValuesAs": undefined,
  },
}
`;

exports[`tiger filter converter from model to AFM convert filter should return range measure value filter with treatNullValueAs 1`] = `
Object {
  "rangeMeasureValueFilter": Object {
    "from": 64,
    "measure": Object {
      "localIdentifier": "m_acugFHNJgsBy",
    },
    "operator": "BETWEEN",
    "to": 128,
    "treatNullValuesAs": 0,
  },
}
`;

exports[`tiger filter converter from model to AFM convert filter should return ranking filter 1`] = `
Object {
  "rankingFilter": Object {
    "measures": Array [
      Object {
        "localIdentifier": "m_acugFHNJgsBy",
      },
    ],
    "operator": "BOTTOM",
    "value": 3,
  },
}
`;

exports[`tiger filter converter from model to AFM convert filter should return ranking filter with attributes 1`] = `
Object {
  "rankingFilter": Object {
    "dimensionality": Array [
      Object {
        "identifier": Object {
          "id": "label.stage.isactive",
          "type": "label",
        },
      },
    ],
    "measures": Array [
      Object {
        "localIdentifier": "m_acugFHNJgsBy",
      },
    ],
    "operator": "TOP",
    "value": 3,
  },
}
`;

exports[`tiger filter converter from model to AFM convert filter should return relative date filter 1`] = `
Object {
  "relativeDateFilter": Object {
    "dataset": Object {
      "identifier": Object {
        "id": "closed.dataset.dt",
        "type": "dataset",
      },
    },
    "from": 20,
    "granularity": "DAY",
    "to": 30,
  },
}
`;

exports[`tiger filter converter from model to AFM convert measure value filter should convert specified using id of metric 1`] = `
Object {
  "comparisonMeasureValueFilter": Object {
    "measure": Object {
      "identifier": Object {
        "id": "measureId",
        "type": "metric",
      },
    },
    "operator": "GREATER_THAN",
    "treatNullValuesAs": undefined,
    "value": 10,
  },
}
`;

exports[`tiger filter converter from model to AFM convert measure value filter should convert specified using id of metric 2`] = `
Object {
  "comparisonMeasureValueFilter": Object {
    "measure": Object {
      "identifier": Object {
        "id": "factId",
        "type": "fact",
      },
    },
    "operator": "GREATER_THAN",
    "treatNullValuesAs": undefined,
    "value": 10,
  },
}
`;

exports[`tiger filter converter from model to AFM convert measure value filter should convert specified using localId of metric specified as string 1`] = `
Object {
  "comparisonMeasureValueFilter": Object {
    "measure": Object {
      "localIdentifier": "localId",
    },
    "operator": "GREATER_THAN",
    "treatNullValuesAs": undefined,
    "value": 10,
  },
}
`;

exports[`tiger filter converter from model to AFM convert measure value filter should convert specified using localId of metric specified by value 1`] = `
Object {
  "comparisonMeasureValueFilter": Object {
    "measure": Object {
      "localIdentifier": "m_aangOxLSeztu",
    },
    "operator": "GREATER_THAN",
    "treatNullValuesAs": undefined,
    "value": 10,
  },
}
`;

exports[`tiger filter converter from model to AFM convert measure value filter should throw exception if filter has idRef without type 1`] = `"Incomplete object specification in {\\"identifier\\":\\"ambiguous\\"}. You must provide both id and type of object you want to reference."`;

exports[`tiger filter converter from model to AFM convert relative date filter should return AFM relative date filter with date granularity 1`] = `
Object {
  "relativeDateFilter": Object {
    "dataset": Object {
      "identifier": Object {
        "id": "closed.dataset.dt",
        "type": "dataset",
      },
    },
    "from": -11,
    "granularity": "DAY",
    "to": 0,
  },
}
`;

exports[`tiger filter converter from model to AFM convert relative date filter should return AFM relative date filter with missing 'to' parameter 1`] = `
Object {
  "relativeDateFilter": Object {
    "dataset": Object {
      "identifier": Object {
        "id": "closed.dataset.dt",
        "type": "dataset",
      },
    },
    "from": 5,
    "granularity": "DAY",
    "to": NaN,
  },
}
`;

exports[`tiger filter converter from model to AFM convert relative date filter should return AFM relative date filter with mission 'from' parameter 1`] = `null`;

exports[`tiger filter converter from model to AFM convert relative date filter should return AFM relative date filter with month granularity 1`] = `
Object {
  "relativeDateFilter": Object {
    "dataset": Object {
      "identifier": Object {
        "id": "closed.dataset.dt",
        "type": "dataset",
      },
    },
    "from": -3,
    "granularity": "MONTH",
    "to": 9,
  },
}
`;

exports[`tiger filter converter from model to AFM convert relative date filter should return AFM relative date filter with quarter granularity 1`] = `
Object {
  "relativeDateFilter": Object {
    "dataset": Object {
      "identifier": Object {
        "id": "closed.dataset.dt",
        "type": "dataset",
      },
    },
    "from": 25,
    "granularity": "QUARTER",
    "to": -2,
  },
}
`;

exports[`tiger filter converter from model to AFM convert relative date filter should return AFM relative date filter with week granularity 1`] = `
Object {
  "relativeDateFilter": Object {
    "dataset": Object {
      "identifier": Object {
        "id": "closed.dataset.dt",
        "type": "dataset",
      },
    },
    "from": 50,
    "granularity": "WEEK",
    "to": 100,
  },
}
`;

exports[`tiger filter converter from model to AFM convert relative date filter should return AFM relative date filter with year granularity 1`] = `
Object {
  "relativeDateFilter": Object {
    "dataset": Object {
      "identifier": Object {
        "id": "closed.dataset.dt",
        "type": "dataset",
      },
    },
    "from": 2,
    "granularity": "YEAR",
    "to": 7,
  },
}
`;
